refactor: remove mapstruct, impl static mapping methods